# android_looper-sys-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  export_doc.sh  index.html  search-index.js
android_looper_sys/: enum.ALooper.html  enum.LooperPoll.html  enum.LooperPrepareOpts.html  fn.ALooper_acquire.html  fn.ALooper_addFd.html  fn.ALooper_forThread.html  fn.ALooper_pollAll.html  fn.ALooper_pollOnce.html  fn.ALooper_prepare.html  fn.ALooper_release.html  fn.ALooper_removeFd.html  fn.ALooper_wake.html  index.html  sidebar-items.js  type.ALooper_callbackFunc.html
android_looper_sys/event/: constant.ERROR.html  constant.HANGUP.html  constant.INPUT.html  constant.INVALID.html  constant.OUTPUT.html  index.html  sidebar-items.js  struct.Type.html
bitflags/__core/ascii/: struct.EscapeDefault.html
bitflags/__core/boxed/: struct.Box.html
bitflags/__core/char/: struct.DecodeUtf16.html  struct.EncodeUtf16.html  struct.EncodeUtf8.html  struct.EscapeDefault.html  struct.EscapeUnicode.html  struct.ToLowercase.html  struct.ToUppercase.html
bitflags/__core/clone/: trait.Clone.html
bitflags/__core/cmp/: trait.Eq.html  trait.Ord.html  trait.PartialEq.html  trait.PartialOrd.html
bitflags/__core/collections/: struct.BTreeMap.html  struct.BTreeSet.html  struct.HashMap.html  struct.HashSet.html
bitflags/__core/default/: trait.Default.html
bitflags/__core/env/: struct.Args.html  struct.ArgsOs.html  struct.SplitPaths.html  struct.Vars.html  struct.VarsOs.html
bitflags/__core/fmt/: trait.Debug.html
bitflags/__core/fs/: struct.ReadDir.html
src/: lib.rs
(+164 files in other folders)
