[package]
name = "android_looper-sys"
version = "0.1.1"
authors = [
    "The android_looper_sys Developers",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nercury/android_looper-sys-rs"
description = """
FFI Bindings to Native Android Looper.
"""

[dependencies]
libc = "0.2"
bitflags = "0.5"
