[package]
name = "android_looper-sys"
version = "0.1.2"
authors = [
    "The android_looper_sys Developers",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nercury/android_looper-sys-rs"
documentation = "http://nercury.github.io/android_looper-sys-rs/android_looper-sys/index.html"
description = """
FFI Bindings to Native Android Looper.
"""

[dependencies]
libc = "0.2"
bitflags = "0.5"
