[package]
name = "android_looper-sys"
version = "0.3.0"
authors = [
    "The android_looper_sys Developers",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nercury/android_looper-sys-rs"
documentation = "http://nercury.github.io/android_looper-sys-rs/android_looper_sys/index.html"
description = """
FFI Bindings to Native Android Looper.
"""
keywords = ["ffi", "android", "looper"]
categories = ["external-ffi-bindings"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
